# agm

./: .gitignore  CHANGELOG.md  Cargo.toml  GEMINI.md  README.md  RELEASE.md  testagm.json
.github/: copilot-instructions.md
.github/workflows/: release.yml
docs/plans/: 2026-02-14-cli-improvements-design.md  2026-02-14-cli-improvements.md  2026-03-21-skills-refactor.md
docs/specs/: skills-refactor.md
docs/superpowers/plans/: 2026-03-20-prompt-blocked-and-display-fixes.md  2026-03-20-windows-platform-support.md  2026-04-02-central-feature-toggle.md  2026-04-02-commands-support.md  2026-04-02-tui-optimizations.md  tui-redesign.md
docs/superpowers/specs/: 2026-03-20-prompt-blocked-and-display-fixes-design.md  2026-03-20-windows-platform-support-design.md  2026-04-01-major-refactor-design.md  2026-04-02-central-feature-toggle-design.md  2026-04-02-commands-support-design.md  2026-04-02-tui-optimization-design.md  2026-04-02-tui-optimizations-design.md  tui-mockups.html  tui-redesign.md
src/: config.rs  editor.rs  files.rs  init.rs  linker.rs  main.rs  manage.rs  paths.rs  platform.rs  skills.rs  status.rs
src/tui/: background.rs  log.rs  mod.rs  popup.rs  source.rs  tool.rs
tests/: cli.rs
