[package]
name = "agm"
version = "0.2.1"
edition = "2021"
description = "AI Agent Manager - centralized config management for AI CLI tools"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"
colored = "3"
anyhow = "1"
chrono = "0.4"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
