[package]
name = "agm"

version = "0.7.2"

edition = "2021"
description = "AI Agent Manager - centralized config management for AI CLI tools"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"
colored = "3"
anyhow = "1"
chrono = "0.4"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
crossterm = "0.28"
fuzzy-matcher = "0.3"

[target.'cfg(windows)'.dependencies]
junction = "1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
